# 21241_project

./: CMakeLists.txt  README.md
libraries/: camera.h  custom_shader.h  mesh.h  model.h
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
src/: lightF.shader  stencilF.shader  stencilV.shader  test.cpp
